src/snapshots/cctop__theme__fixture_b_snapshots__fixture_b_panel_6_80x30.snap
---
source: src/theme.rs
expression: "render_to_string(&app, 80, 30)"
---
┌ Agents ─ 0 · 0 running · —  ↕spend↓  (s/S sort, j/k, Enter expand, Esc back) ┐
│   type     model    time   tok    ≈$   ret  waste                            │
│ no subagents yet                                                             │
│────────────────────────────────────────────────────────────                  │
│ waste: failed 0.00 · killed 0.00 · no ret 0.00 · idle 0.00                   │
│ cold starts 0 (≈$0.000 writes) · no output yet                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 ?help  1-9 open a panel full-screen  c coach  a ask  t theme  q
