src/snapshots/cctop__theme__fixture_b_snapshots__fixture_b_panel_9_80x30.snap
---
source: src/theme.rs
expression: "render_to_string(&app, 80, 30)"
---
┌ LATER A17 — Fixed prefix 49k tokens ≈$0.15/turn at 15 calls  (Esc back) ─────┐
│ Evidence  largest: built-in tools (schemas) (12k) · /context: 88k used       │
│ Action    trim CLAUDE.md, move rarely-used rules to skills, disable unused   │
│MCP servers and plugins                                                       │
│ Saving    ~147k/turn                                                         │
│ Retires   on 3 turns · since turn 6 · window 1 turn                          │
│                                                                              │
│ Why       The fixed prefix (system prompt, CLAUDE.md, tool schemas, skills,  │
│plugins) is sent on every request. Even as a cache read it is billed on every │
│call, so its cost per turn is prefix × cache-read price × calls per turn. Trim│
│CLAUDE.md, move rarely used rules into skills, and disable MCP servers and    │
│plugins you do not use in this project.                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 ?help  1-9 open a panel full-screen  c coach  a ask  t theme  q
